<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cr_all_per"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="60dp"
            android:fontFamily="@font/thin_ios"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:text="@string/xiaomi"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:ellipsize="end"
            android:gravity="left"
            android:fontFamily="@font/thin_ios"
            android:includeFontPadding="false"
            android:lineSpacingExtra="@dimen/_4sdp"
            android:text="@string/start_in_backgroud_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            tools:ignore="RtlHardcoded" />

        <RelativeLayout
            android:id="@+id/cr_open_per"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/all_bg_gradient">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/yes_per"
                android:fontFamily="@font/thin_ios"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.cardview.widget.CardView>